Fix collapse menu size and add aot mode on build

--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,7 +1,6 @@
 md-sidenav {
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: 200px;
 
     background-color: rgb(50, 53, 56);
